Silence some warnings from IntelliJ